fixed add button being invisible on the create page

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -291,6 +291,14 @@ label {
   left: -3rem;
 
 }
+.icon.add-new {
+  position: relative;
+  left: 0;
+  width: 32px;
+  height: 32px;
+ 
+
+}
 
 .icon-container {
   display: flex;
